# software-engineering-and-agile-assignment

./: .gitignore  Makefile  Procfile  README.md  api.py  app.py  auth.py  constants.py  database.db  models.py  pyproject.toml  requirements.txt  views.py
forms/: Profile.py  SignUp.py
incident_management/: .env  app.py  database.db  db_setup.py
incident_management/forms/: Profile.py
incident_management/templates/: administration.html  home.html  incident.html  layout.html  profile.html
incident_management/templates/auth/: login.html  signup.html
templates/: administration.html  home.html  incident.html  incidents.html  layout.html  task.html
templates/auth/: login.html  signup.html
templates/errors/: 404.html
