[tool.poetry]
name = "software-engineering-and-agile-assignment"
version = "0.1.0"
description = ""
authors = ["Kai <kaispencer98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"
# sqlalchemy-stubs = "^0.4"
python-dotenv = "^0.19.2"
Flask-Login = "^0.6.0"
djhtml = "^1.5.0"
Flask-WTF = "^1.0.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
